# Altverse-Compute

./: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
additional/tracker/: Cargo.toml
additional/tracker/src/: lib.rs
src/: builder.rs  bus.rs  config.rs  fbs.rs  lib.rs  pulse.rs  pulse_gen.rs
src/managers/: player.rs  world.rs
src/resources/: area.rs  effect.rs  entity.rs  mod.rs  player.rs  world.rs
src/resources/assets/: entity.rs  hero.rs
src/resources/assets/effects/: draining.rs  slipped.rs  slow.rs
src/resources/assets/entities/: bee.rs  cloud.rs  draining.rs  drop.rs  fade.rs  flame.rs  flamesniper.rs  homing.rs  homingsniper.rs  icicle.rs  immune.rs  leaf.rs  mod.rs  normal.rs  sizer.rs  slow.rs  sniper.rs  stormcloud.rs  wall.rs
src/resources/assets/heroes/: maven.rs  mod.rs
src/resources/utils/: input.rs  join.rs  vector.rs
test/worlds/: world.json
